<resources>
    <string name="app_name">메이플 캘린더</string>
    <string name="name_menu_home">Home</string>
    <string name="name_menu_calendar">Calendar</string>
    <string name="name_menu_setting">Setting</string>
    <string name="name_menu_character">Character</string>
    <string name="name_menu_equipment">Equipment</string>
    <string name="name_menu_skill">Skill</string>
    <string name="name_menu_change_character_name">Change Character Name</string>
    <string name="name_menu_character_name_change_dialog">Character Name Change Dialog</string>
    <string name="name_menu_set_push_notification">Set Push Notification</string>
    <string name="name_menu_day_event">Events of Date</string>
    <string name="name_menu_wait_equipment_detail">Wait For Item Equipment Detail</string>
    <string name="name_menu_item_equipment_detail">Item Equipment Detail</string>
    <string name="name_menu_android_detail">Android Detail</string>
    <string name="name_search_date">Search Date</string>
    <string name="name_hyper_stat">Hyper Stat</string>
    <string name="name_ability">Ability</string>
    <string name="name_skill_detail">Skill Detail</string>
    <string name="name_hyper_skill">Hyper Skill</string>
    <string name="name_link_skill">Link Skill</string>
    <string name="text_nothing">-</string>
    <string name="text_year">년</string>
    <string name="text_sunday">일</string>
    <string name="text_monday">월</string>
    <string name="text_tuesday">화</string>
    <string name="text_wednesday">수</string>
    <string name="text_thursday">목</string>
    <string name="text_friday">금</string>
    <string name="text_saturday">토</string>
    <string name="text_today_event">오늘 진행중인 이벤트는…</string>
    <string name="text_specific_date_event">에 진행중인 이벤트</string>
    <string name="text_character_info">에 대한 정보</string>
    <string name="text_search_date">기준일 : &#160;</string>
    <string name="text_search_date_now">실시간</string>
    <string name="text_character_detail">자세히 보기</string>
    <string name="text_information_date">캐릭터의 상세 정보는 2023년 12월 21일 이후에 접속한 캐릭터만 확인 가능해요.</string>
    <string name="text_information_time">캐릭터의 정보는 매일 01시마다 갱신돼요.</string>
    <string name="text_information_profile">캐릭터 이미지를 클릭하면 캐릭터의 상세한 정보를 확인할 수 있어요.</string>
    <string name="text_event_example">이벤트</string>
    <string name="text_event_scope">~</string>
    <string name="text_tag_pc_room">PC방</string>
    <string name="text_tag_special_stat">보약버프</string>
    <string name="text_tag_mini_game">미니게임</string>
    <string name="text_tag_day_check">출석체크</string>
    <string name="text_tag_burning">버닝</string>
    <string name="text_tag_coinshop">코인샵</string>
    <string name="text_tag_cash">캐시</string>
    <string name="text_tag_boss">보스</string>
    <string name="text_tag_punch_king">펀치킹</string>
    <string name="text_tag_world_leap">월드리프</string>
    <string name="text_tag_event_world">이벤트맵</string>
    <string name="text_tag_hunting">사냥</string>
    <string name="text_tag_coordinate">코디</string>
    <string name="text_tag_special_sunday">스페셜썬데이</string>
    <string name="text_tag_default">메인</string>
    <string name="text_level">레벨</string>
    <string name="text_lv">Lv.</string>
    <string name="text_union">유니온</string>
    <string name="text_dojang">무릉도장</string>
    <string name="text_popularity">인기도</string>
    <string name="text_class">직업</string>
    <string name="text_world">월드</string>
    <string name="text_guild">길드</string>
    <string name="text_gender">성별</string>
    <string name="text_nickname_change">CHANGE NICKNAME</string>
    <string name="text_title_nickname_change">닉네임 변경</string>
    <string name="text_description_character_name_change">조회할 캐릭터의 닉네임을 입력하고 유효한 캐릭터명인지 확인하세요.</string>
    <string name="text_character_name_validate">닉네임 검증</string>
    <string name="text_character_name_change">캐릭터 변경</string>
    <string name="text_change">변경</string>
    <string name="text_push_notification">EVENT NOTIFY</string>
    <string name="text_title_push_notification">이벤트 알림 설정</string>
    <string name="text_ask_push_notification">이벤트 알림을 받으시겠어요?</string>
    <string name="text_allow">허용</string>
    <string name="text_not_allow">취소</string>
    <string name="text_close">닫기</string>
    <string name="text_today_todo_list">오늘의 메할일</string>
    <string name="text_today_todo_list_finish">완료한 메할일</string>
    <string name="text_light_mode">Light Mode</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_title_character_info">CHARACTER INFO</string>
    <string name="text_title_character_stat">STAT</string>
    <string name="text_character_stat">스탯</string>
    <string name="text_character_power">전투력</string>
    <string name="text_character_str">STR</string>
    <string name="text_character_dex">DEX</string>
    <string name="text_character_int">INT</string>
    <string name="text_character_luk">LUK</string>
    <string name="text_character_hp">HP</string>
    <string name="text_character_mp">MP</string>
    <string name="text_character_stat_power">스탯 공격력</string>
    <string name="text_character_damage">데미지</string>
    <string name="text_character_final_damage">최종 데미지</string>
    <string name="text_character_boss_damage">보스 몬스터 데미지</string>
    <string name="text_character_ignore_monster_armor">방어율 무시</string>
    <string name="text_character_normal_damage">일반 몬스터 데미지</string>
    <string name="text_character_attack_power">공격력</string>
    <string name="text_character_critical_rate">크리티컬 확률</string>
    <string name="text_character_magic_power">마력</string>
    <string name="text_character_critical_damage">크리티컬 데미지</string>
    <string name="text_character_cooltime_reduce">재사용 대기시간 감소</string>
    <string name="text_character_buff_persist_time">버프 지속시간</string>
    <string name="text_character_cooltime_cancel">재사용 대기시간 미적용</string>
    <string name="text_character_ignore_element_resist">속성 내성 무시</string>
    <string name="text_character_crowd_control_damage">상태이상 추가 데미지</string>
    <string name="text_character_summon_time_increase">소환수 지속시간 증가</string>
    <string name="text_character_meso_drop">메소 획득량</string>
    <string name="text_character_starforce">스타포스</string>
    <string name="text_character_item_drop">아이템 드롭률</string>
    <string name="text_character_arcane_force">아케인 포스</string>
    <string name="text_character_exp_up">추가 경험치 획득</string>
    <string name="text_character_authentic_force">어센틱 포스</string>
    <string name="text_character_armor">방어력</string>
    <string name="text_character_crowd_control_resist">상태이상 내성</string>
    <string name="text_character_speed">이동속도</string>
    <string name="text_character_jump">점프력</string>
    <string name="text_character_stance">스탠스</string>
    <string name="text_character_attack_speed">공격 속도</string>
    <string name="text_loading_equipment">아이템 정보를 불러오는 중입니다.</string>
    <string name="text_title_equipment">EQUIPMENT INVENTORY</string>
    <string name="text_preset_1">PRESET 1</string>
    <string name="text_preset_2">PRESET 2</string>
    <string name="text_preset_3">PRESET 3</string>
    <string name="text_rare_item">레어 아이템</string>
    <string name="text_epic_item">에픽 아이템</string>
    <string name="text_unique_item">유니크 아이템</string>
    <string name="text_legendary_item">레전드리 아이템</string>
    <string name="text_required_lev">■ REQ LEV : </string>
    <string name="text_required_lev_zero">0</string>
    <string name="text_required_str">■ REQ STR</string>
    <string name="text_required_dex">■ REQ DEX</string>
    <string name="text_required_int">■ REQ INT</string>
    <string name="text_required_luk">■ REQ LUK</string>
    <string name="text_required_stat">: 000</string>
    <string name="text_beginner">초보자</string>
    <string name="text_warrior">전사</string>
    <string name="text_magician">마법사</string>
    <string name="text_archer">궁수</string>
    <string name="text_thief">도적</string>
    <string name="text_pirate">해적</string>
    <string name="text_superior">슈페리얼</string>
    <string name="text_equipment_classified">장비분류 : </string>
    <string name="text_android_shape">외형 : </string>
    <string name="text_android_grade">등급 : </string>
    <string name="text_left_bracket">(</string>
    <string name="text_right_bracket">)</string>
    <string name="text_equipment_str">STR : +</string>
    <string name="text_equipment_dex">DEX : +</string>
    <string name="text_equipment_int">INT : +</string>
    <string name="text_equipment_luk">LUK : +</string>
    <string name="text_equipment_maxhp">최대 HP : +</string>
    <string name="text_equipment_maxmp">최대 MP : +</string>
    <string name="text_equipment_maxhp_rate">최대 HP : +</string>
    <string name="text_equipment_maxmp_rate">최대 MP : +</string>
    <string name="text_equipment_attack_power">공격력 : +</string>
    <string name="text_equipment_magic_power">마력 : +</string>
    <string name="text_equipment_armor">방어력 : +</string>
    <string name="text_equipment_speed">이동속도 : +</string>
    <string name="text_equipment_jump">점프력 : +</string>
    <string name="text_equipment_boss_damage">보스 몬스터 공격 시 데미지 +</string>
    <string name="text_equipment_ignore_monster_armor">몬스터 방어율 무시 : +</string>
    <string name="text_equipment_damage">데미지 : +</string>
    <string name="text_equipment_all_stat">올스탯 : +</string>
    <string name="text_equipment_equipment_level_decrease">착용 레벨 감소 : -</string>
    <string name="text_equipment_scroll_upgradeable_count">업그레이드 가능 횟수 : </string>
    <string name="text_equipment_scroll_resilience_count">복구 가능 횟수 : </string>
    <string name="text_equipment_golden_hammer_flag">황금망치 제련 적용</string>
    <string name="text_cuttable_count">가위 사용 가능 횟수 : </string>
    <string name="text_potential">잠재옵션</string>
    <string name="text_additional_potential">에디셔널 잠재옵션</string>
    <string name="text_exceptional">익셉셔널 강화</string>
    <string name="text_exceptional_able">익셉셔널 강화가 가능합니다. (최대 : 1회)</string>
    <string name="text_exceptional_used">익셉셔널 강화 1회 적용 (최대 1회 강화 가능)</string>
    <string name="text_exceptional_hp_mp">최대 HP / 최대 MP : +</string>
    <string name="text_exceptional_attack_magic_power">공격력 / 마력 : +</string>
    <string name="text_not_able_to_set_potential">잠재능력 설정 불가</string>
    <string name="text_hyper_stat">하이퍼 스탯</string>
    <string name="text_title_hyper_stat">HYPER STAT</string>
    <string name="text_hyper_stat_remain_point">POINT</string>
    <string name="text_ability">어빌리티</string>
    <string name="text_title_ability">ABILITY</string>
    <string name="text_ability_remain_point">명성치</string>
    <string name="text_title_skill">SKILL</string>
    <string name="text_hyper_skill">하이퍼</string>
    <string name="text_title_hyper_skill">HYPER SKILL INVENTORY</string>
    <string name="text_title_link_skill">LINK SKILL</string>
    <string name="text_title_hyper_skill_passive">패시브 스킬</string>
    <string name="text_title_hyper_skill_active">액티브 스킬</string>
    <string name="text_skill_grade_zero">•</string>
    <string name="text_skill_grade_one">I</string>
    <string name="text_skill_grade_one_plus">I+</string>
    <string name="text_skill_grade_two">II</string>
    <string name="text_skill_grade_two_plus">II+</string>
    <string name="text_skill_grade_three">III</string>
    <string name="text_skill_grade_four">IV</string>
    <string name="text_skill_grade_five">V</string>
    <string name="text_skill_grade_six">VI</string>
    <string name="text_skill_level_left">[현재레벨</string>
    <string name="text_skill_level_next_left">[다음레벨</string>
    <string name="text_skill_level_right">]</string>
    <string name="text_owned_link_skill">내 링크 스킬</string>
    <string name="text_title_character_name_change_dialog">캐릭터 닉네임 설정</string>
    <string name="description_character_profile">캐릭터 프로필 이미지</string>
    <string name="description_character_nickname_edittext_hint">특수 문자나 공백을 제외하고 6자 이내로 입력해주세요.</string>
    <string name="description_close">닫기</string>
</resources>