<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.bodan.maplecalendar.presentation.views.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_character"
            android:elevation="2dp"
            tools:context=".presentation.views.setting.PushNotificationFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_left_push_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_top_push_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/guideline_medium" />

            <TextView
                android:id="@+id/tv_title_push_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardbold"
                android:text="@string/text_push_notification"
                android:textColor="@color/character_info"
                android:textSize="@dimen/font_size_too_largest"
                app:layout_constraintBottom_toTopOf="@id/tv_ask_push_notification"
                app:layout_constraintStart_toEndOf="@id/gl_left_push_notification"
                app:layout_constraintTop_toBottomOf="@id/gl_top_push_notification" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_push_notification"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/shape_close"
                android:contentDescription="@string/description_close"
                android:onClick="@{() -> vm.closePushNotification()}"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_push_notification"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/gl_right_push_notification"
                app:layout_constraintTop_toTopOf="@id/tv_title_push_notification" />

            <TextView
                android:id="@+id/tv_ask_push_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guideline_larger"
                android:fontFamily="@font/pretendardregular"
                android:text="@string/text_ask_push_notification"
                android:textColor="@color/white"
                android:textSize="@dimen/title_font_size_medium"
                app:layout_constraintEnd_toStartOf="@id/gl_right_push_notification"
                app:layout_constraintStart_toEndOf="@id/gl_left_push_notification"
                app:layout_constraintTop_toBottomOf="@id/tv_title_push_notification" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_allow_push_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guideline_larger"
                android:layout_marginEnd="@dimen/guideline_medium"
                android:background="@color/submit"
                android:fontFamily="@font/pretendardregular"
                android:onClick="@{() -> vm.setCallAlarm()}"
                android:text="@string/text_allow"
                android:textColor="@color/white"
                android:textSize="@dimen/title_font_size_big"
                app:layout_constraintBottom_toTopOf="@id/gl_bottom_push_notification"
                app:layout_constraintEnd_toStartOf="@id/btn_not_allow_push_notification"
                app:layout_constraintStart_toEndOf="@id/gl_left_push_notification"
                app:layout_constraintTop_toBottomOf="@id/tv_ask_push_notification" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_not_allow_push_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/guideline_medium"
                android:background="@color/alert"
                android:fontFamily="@font/pretendardregular"
                android:onClick="@{() -> vm.setCancelAlarm()}"
                android:text="@string/text_not_allow"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_too_largest"
                app:layout_constraintBottom_toBottomOf="@id/btn_allow_push_notification"
                app:layout_constraintEnd_toStartOf="@id/gl_right_push_notification"
                app:layout_constraintStart_toEndOf="@id/btn_allow_push_notification"
                app:layout_constraintTop_toTopOf="@id/btn_allow_push_notification" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_right_push_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guideline_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_bottom_push_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/guideline_medium" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>