<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_character">

    <data>

        <variable
            name="vm"
            type="com.bodan.maplecalendar.presentation.CharacterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.character.CharacterFragment">

        <TextView
            android:id="@+id/tv_character_name_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_start"
            android:layout_marginTop="@dimen/title_top"
            android:fontFamily="@font/pretendardregular"
            android:text="@{vm.characterName}"
            android:textSize="@dimen/title_font_size_large"
            app:layout_constraintBottom_toTopOf="@id/iv_character_character"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_character_character"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginStart="@dimen/image_start"
            android:layout_marginTop="@dimen/image_top"
            android:layout_marginBottom="@dimen/image_bottom"
            android:background="@drawable/shape_dialog"
            android:contentDescription="@string/description_character_profile"
            android:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@id/tv_stat_character"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_character_name_character"
            app:profileImage="@{vm.characterBasic.characterImage}" />

        <TextView
            android:id="@+id/tv_level_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_start"
            android:text="@string/text_lv"
            android:textSize="@dimen/title_font_size_small"
            app:layout_constraintEnd_toStartOf="@id/tv_character_level_character"
            app:layout_constraintStart_toEndOf="@id/iv_character_character"
            app:layout_constraintTop_toTopOf="@id/iv_character_character" />

        <TextView
            android:id="@+id/tv_character_level_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.characterLevel}"
            android:textSize="@dimen/title_font_size_small"
            app:layout_constraintBottom_toBottomOf="@id/tv_level_character"
            app:layout_constraintStart_toEndOf="@id/tv_level_character"
            app:layout_constraintTop_toTopOf="@id/tv_level_character" />

        <TextView
            android:id="@+id/tv_character_class_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.characterBasic.characterClass}"
            android:textSize="@dimen/title_font_size_small"
            app:layout_constraintBottom_toTopOf="@id/tv_guild_character"
            app:layout_constraintStart_toStartOf="@id/tv_level_character"
            app:layout_constraintTop_toBottomOf="@id/tv_level_character" />

        <TextView
            android:id="@+id/tv_guild_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.characterBasic.characterGuildName}"
            android:textSize="@dimen/title_font_size_small"
            app:layout_constraintStart_toStartOf="@id/tv_level_character"
            app:layout_constraintTop_toBottomOf="@id/tv_character_class_character" />

        <TextView
            android:id="@+id/tv_stat_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_start"
            android:layout_marginTop="@dimen/title_top"
            android:text="@string/text_character_stat"
            android:textSize="@dimen/title_font_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_character_character" />

        <TextView
            android:id="@+id/tv_power_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_start"
            android:text="@string/text_character_power"
            android:textSize="@dimen/title_font_size_big"
            app:layout_constraintEnd_toStartOf="@id/tv_character_power_character"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_stat_character" />

        <TextView
            android:id="@+id/tv_character_power_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_start"
            android:text="@{vm.characterStatInfo.characterPower}"
            android:textSize="@dimen/title_font_size_big"
            app:layout_constraintBottom_toBottomOf="@id/tv_power_character"
            app:layout_constraintStart_toEndOf="@id/tv_power_character"
            app:layout_constraintTop_toTopOf="@id/tv_power_character" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>