<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.bodan.maplecalendar.presentation.views.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_character"
            android:elevation="2dp"
            tools:context=".presentation.views.setting.ChangeCharacterNameFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_left_change_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_top_change_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/guideline_medium" />

            <TextView
                android:id="@+id/tv_title_change_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardbold"
                android:text="@string/text_nickname_change"
                android:textColor="@color/character_info"
                android:textSize="@dimen/title_font_size_big"
                app:layout_constraintBottom_toTopOf="@id/et_change_character_name"
                app:layout_constraintStart_toEndOf="@id/gl_left_change_character_name"
                app:layout_constraintTop_toBottomOf="@id/gl_top_change_character_name" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_change_character_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/shape_close"
                android:contentDescription="@string/description_close"
                android:onClick="@{() -> vm.closeChangeCharacterName()}"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_change_character_name"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/gl_right_change_character_name"
                app:layout_constraintTop_toTopOf="@id/tv_title_change_character_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_change_character_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guideline_medium"
                android:autofillHints="@null"
                android:background="@drawable/shape_default_stat"
                android:ems="10"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/description_character_nickname_edittext_hint"
                android:inputType="text"
                android:maxLength="12"
                android:onTextChanged="@{(characterName, s, b, c) -> vm.validateCharacterName(characterName)}"
                android:paddingTop="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_large"
                android:text="@={vm.newCharacterName}"
                android:textSize="@dimen/font_size_large"
                app:layout_constraintBottom_toTopOf="@id/btn_change_character_name"
                app:layout_constraintEnd_toStartOf="@id/gl_right_change_character_name"
                app:layout_constraintStart_toEndOf="@id/gl_left_change_character_name"
                app:layout_constraintTop_toBottomOf="@id/tv_title_change_character_name" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guideline_medium"
                android:background="@{(vm.settingUiState.isSubmitBtnEnable == true) ? @color/submit : @color/gray}"
                android:enabled="@{vm.settingUiState.isSubmitBtnEnable}"
                android:onClick="@{() -> vm.submitChangeCharacterName()}"
                android:padding="@dimen/padding_medium"
                android:text="@string/text_change"
                android:textColor="@{(vm.settingUiState.isSubmitBtnEnable == true) ? @color/white : @color/black}"
                android:textSize="@dimen/font_size_largest"
                app:layout_constraintBottom_toTopOf="@id/gl_bottom_change_character_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_change_character_name" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_right_change_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guideline_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_bottom_change_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/guideline_medium" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>